Skeleton UI Completed
Skeleton UI done. Just need to decide how the main class will handle
everything and mash it all together sometime.

--- a/client/src/main/java/edu/iastate/cs/theseguys/ui/chat.fxml
+++ b/client/src/main/java/edu/iastate/cs/theseguys/ui/chat.fxml
@@ -1,8 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.GridPane?>
-<GridPane fx:controller="edu.iastate.cs.theseguys.ui.ChatController"
-          xmlns:fx="http://javafx.com/fxml/1">
-    <!-- TODO Add Nodes -->
-</GridPane>
+<?import java.lang.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
+	<children>
+		<GridPane AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
+			<columnConstraints>
+			</columnConstraints>
+			<rowConstraints>
+			</rowConstraints>
+			<children>
+				<Button fx:id="submit" mnemonicParsing="false" onAction="#submitText" text="Submit" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+				<TextArea fx:id="chat" editable="false" prefHeight="200.0" prefWidth="200.0" />
+				<TextField fx:id="input" GridPane.rowIndex="1" />
+			</children>
+		</GridPane>
+	</children>
+</AnchorPane>
