--- a/client/src/main/java/edu/iastate/cs/theseguys/ui/login.fxml
+++ b/client/src/main/java/edu/iastate/cs/theseguys/ui/login.fxml
@@ -1,39 +1,50 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Text?>
-<GridPane prefHeight="375.0" prefWidth="400.0" fx:controller="edu.iastate.cs.theseguys.ui.LoginController"
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10"
-          styleClass="root">
+
+<GridPane alignment="center" hgap="10" prefHeight="600.0" prefWidth="800.0" styleClass="root" vgap="10" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="edu.iastate.cs.theseguys.ui.LoginController">
     <padding>
-        <Insets top="25" right="25" bottom="10" left="25"/>
+        <Insets bottom="10" left="25" right="25" top="25" />
     </padding>
-
-    <Text id="title" text="Welcome" GridPane.columnIndex="0"
-          GridPane.rowIndex="0" GridPane.columnSpan="2"/>
-
-    <Label text="Username" GridPane.columnIndex="0"
-           GridPane.rowIndex="1"/>
-
-    <TextField fx:id="username" GridPane.columnIndex="1"
-               GridPane.rowIndex="1"/>
-
-    <Label text="Password" GridPane.columnIndex="0"
-           GridPane.rowIndex="2"/>
-
-    <PasswordField fx:id="password" GridPane.columnIndex="1"
-                   GridPane.rowIndex="2"/>
-
-    <HBox spacing="10" alignment="center" GridPane.columnIndex="1"
-          GridPane.rowIndex="4">
-        <Button text="Sign in" onAction="#signin"/>
-        <Button text="Register" onAction="#register"/>
-    </HBox>
-
-    <Text fx:id="error" GridPane.columnIndex="0" GridPane.columnSpan="2"
-          GridPane.halignment="RIGHT" GridPane.rowIndex="6"/>
+   <children>
+   
+       <Text id="title" text="Welcome" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="0" />
+   
+       <Label text="Username" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+   
+       <TextField fx:id="username" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+   
+       <Label text="Password" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+   
+       <PasswordField fx:id="password" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+   
+       <HBox alignment="center" spacing="10" GridPane.columnIndex="1" GridPane.rowIndex="4">
+      <children>
+              <Button onAction="#button" text="Sign in" />
+              <Button onAction="#button" text="Register" />
+      </children>
+       </HBox>
+   
+       <Text fx:id="error" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="6" />
+   </children>
+   <columnConstraints>
+      <ColumnConstraints />
+      <ColumnConstraints />
+   </columnConstraints>
+   <rowConstraints>
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+   </rowConstraints>
 
 </GridPane>
-
