Added Logout Button and corresponding fucntion

--- a/client/src/main/resources/fxml/chat.fxml
+++ b/client/src/main/resources/fxml/chat.fxml
@@ -21,6 +21,7 @@
 				<TextArea fx:id="chat" editable="false" prefHeight="200.0" prefWidth="200.0" />
 				<TextField fx:id="input" GridPane.rowIndex="1" />
 				<TextArea fx:id="users" editable="false" prefHeight="307.0" prefWidth="176.0" GridPane.columnIndex="1" />
+            <Button fx:id="logout" onAction="#logout" alignment="CENTER_RIGHT" mnemonicParsing="false" text="Logout" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
 			</children>
 		</GridPane>
 	</children>
